runFormatTest(import.meta, ["vue"], { vueIndentScriptAndStyle: true });
runFormatTest(import.meta, ["vue"], { vueIndentScriptAndStyle: false });
runFormatTest(import.meta, ["vue"], { vueIndentTemplate: true });
runFormatTest(import.meta, ["vue"], { vueIndentTemplate: false });
